second file updated

--- a/registration.html
+++ b/registration.html
@@ -29,17 +29,18 @@
                             <li><label for="email">E-mail</label></li>
                             <li><input type="text" id="email" name="email" /></li>
 
-                            
-                                <li><label for="password">Password</label></li>
-                                <li><input type="password" id="password" name="password" /></li>
-                                <li><input type="checkbox" onclick="Toogle()">Show Password</li>
 
-                            <li><input type="submit" name="submit" value="Submit" onclick="addData()" /></li>
+                            <li><label for="password">Password</label></li>
+                            <li><input type="password" id="password" name="password" /></li>
+                            <li><input type="checkbox" onclick="Toogle()">Show Password</li>
+                            <div class="sub">
+                                <li><input type="submit" name="submit" value="Submit" onclick="addData()" /></li></div>
                         </ul>
                     </div>
                 </div>
-            </div>
-        </form>
+            
+    </div>
+    </form>
     </div>
 </body>
 
